--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,118 @@
-div#map {
-    min-height: 360px;
+@import url('https://fonts.googleapis.com/css?family=Lato|Roboto:100,200,00,400,500,600,700');
+
+body {
+    font-family: 'Lato', sans-serif;
 }
+
+#map {
+    min-height: 360px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+/*------------------------------Heading*/
+
+
+
+.heading {
+    width: 100%;
+}
+
+.heading {
+    font-size: 25px;
+    font-weight: bold;
+    font-style: italic;
+    background-color: #0040ff;
+    color: #fafafa;
+    width: 100%;
+    padding: 20px;
+    padding-left: 30px;
+    margin-right: 0;
+}
+.heading-color {
+    color: #ff3300;
+}
+
+/*-----------------------------Callout*/
+
+.callout-container {
+    height: 100vh;
+    width: 100%;
+    background-image: url('./images/cape-town.jpg');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    display: flex;
+    position: relative; 
+}
+
+.callout-text {
+    margin-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+    color: #606060;
+    font-weight: bold;
+}
+
+/*----------------------------Search*/
+
+.search-section {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.resetbutton {
+    background-color: #ff3300;
+    color: white;
+    margin: 20px;
+    align-content: center;
+}
+
+/*----------------------------InfoWindow*/
+
+.infowindow {
+    display: none;
+}
+
+.iw-heading {
+    font-weight: bold;
+}
+
+/*---------------------------General*/
+
+.spacer {
+    min-height: 20px;
+}
+
+/*----------------------------Footer*/
+
+#footer {
+    padding-top: 20px;
+    background-color: #606060;
+    color: azure;
+    font-weight: 200;
+}
+
+.footer-col {
+    text-align: center;
+}
+
+.footer-links li a i {
+    width: 30px;
+    height: 30px;
+    padding: 10px 0;
+    border-radius: 50%;
+    font-size: 15px;
+    line-height: 8px;
+    text-align: center;
+    color: #0040ff;
+    background: #fafafa;
+    transition: all 0.5s ease-in-out;
+}
+
+.footer-links li a i:hover {
+    background: #ff3300;
+}
+
+/*----------------------------Media Queries*/
+
